--- a/petsitter-dashboard.html
+++ b/petsitter-dashboard.html
@@ -345,7 +345,7 @@ section:after {
   border-color: rgba(0, 0, 0, 0.56);
 }
 
-.btn-left1 {
+.btn-left {
    background-color: #A5C0A0;
   color: rgba(253,100,55,1);
   width: 219px;
@@ -354,27 +354,6 @@ section:after {
   padding-left: 50px;
   text-decoration-line: none;
 }
-
-.btn-left2 {
-   background-color: #A5C0A0;
-  color: rgba(253,100,55,1);
-  width: 219px;
-  height: 60px;
-  padding: 20px 70px;
-  padding-left: 50px;
-  text-decoration-line: none;
-}
-
-.btn-left3 {
-   background-color: #A5C0A0;
-  color: rgba(253,100,55,1);
-  width: 219px;
-  height: 60px;
-  padding: 20px 68px;
-  padding-left: 50px;
-  text-decoration-line: none;
-}
-
 
 .list-left li {
     padding: 25px;
@@ -448,14 +427,14 @@ section:after {
   <nav>
     <ul class="list-left">
           <li><a href="petsitter-dashboard.html" class="btn-profile">Profile</a></li>
-          <li><a href="#" class="btn-left1">Requests</a></li>
-          <li><a href="#" class="btn-left2">Messages</a></li>
-          <li><a href="#" class="btn-left3">Calendars</a></li>
+          <li><a href="petsitter-dashboard.html" class="btn-left">Requests</a></li>
+          <li><a href="petsitter-dashboard.html" class="btn-left">Messages</a></li>
+          <li><a href="petsitter-dashboard.html" class="btn-left">Calendars</a></li>
     </ul>
     <table>
 			<tr>
 				<th><img src="images/logo-settings.png" id="logo-settings" alt="Settings logo"></th>
-				<th id="settings-style"><a href="#" class="settings">Settings</a></th>
+				<th id="settings-style"><a href="petsitter-dashboard.html" class="settings">Settings</a></th>
 			</tr>
 	</table>
  </nav>
@@ -506,7 +485,7 @@ section:after {
 					
 						<th id="dog-tab"><img src="images/dog.jpg" id="dog" alt="Dog picture">
 						</th>
-						<th id="edit-tab"><a href="petsitter-registration" class="btn-green3">Edit</a>
+						<th id="edit-tab"><a href="petsitter-registration.html" class="btn-green3">Edit</a>
 						</th>
 					</tr>
 				</table>
