--- a/petsittersignup.html
+++ b/petsittersignup.html
@@ -16,25 +16,25 @@
 			<h1>Sign up for a free account</h1>
 			<ul class="list-incolumn">
 				<li>
-					<a href="petsitter-dashboard" class="btn-white">Continue with Facebook</a>
+					<a href="petsitter-dashboard.html" class="btn-white">Continue with Facebook</a>
 				</li>
 				<li>
-					<a href="petsitter-dashboard" class="btn-white">Continue with Google</a>		
+					<a href="petsitter-dashboard.html" class="btn-white">Continue with Google</a>		
 				</li>
 				<li>
-					<a href="petsitter-dashboard" class="btn-black">Continue with Apple</a>
+					<a href="petsitter-dashboard.html" class="btn-black">Continue with Apple</a>
 				</li>
 					<p id="or">
 					Or
       				</p>
 				<li>
-					<a href="petsitter-dashboard" class="btn-white">Sign up with email</a>
+					<a href="petsitter-registration.html" class="btn-white">Sign up with email</a>
 				</li>
 			</ul>
 				<table>
 					<tr>
 						<th id="account">Already have an account ?</th>
-						<th><a href="petsitter-dashboard" id="login">Login now</a></th>
+						<th><a href="petsitter-dashboard.html" id="login">Login now</a></th>
 					</tr>
 				</table>
 
