--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
   <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
   </head>
 
 <body>
@@ -22,32 +20,34 @@
    <a href="index.html">🔍 Search a pet-sitter</a>
    <a href="petsitter-registration.html">♡ Become a pet-sitter</a>
    <a href="index.html">🐾 Discover our services</a>
-  <div class="popup" onclick="myFunction()"><a href="petsittersignup.html">Sign up / Login</a>
-  <span class="popuptext" id="myPopup"> <div class="card-rectangle">
-    <h1>Sign up for a free account</h1>
+  <div class="popup" onclick="myFunction()">Sign up / Login <span class="popuptext" id="myPopup"> <div class="card-rectangle">
+			<h1>Sign up for a free account</h1>
 			<ul class="list-incolumn">
 				<li>
-					<a href="petsitter-dashboard.html" class="btn-white">Continue with Facebook</a>
+					<div class="btn-white"><a href="#">Continue with Facebook</a></div>
 				</li>
 				<li>
-					<a href="petsitter-dashboard.html" class="btn-white">Continue with Google</a>		
+					<div class="btn-white"><a href="#">Continue with Google</a></div>	
 				</li>
 				<li>
-					<a href="petsitter-dashboard.html" class="btn-black">Continue with Apple</a>
+					<a href="#" class="btn-black">Continue with Apple</a>
 				</li>
 					<p id="or">
 					Or
       				</p>
 				<li>
-					<a href="petsitter-registration.html" class="btn-white">Sign up with email</a>
+					<div class="btn-white"><a href="#">Sign up with email</a></div>
 				</li>
 			</ul>
 				<table>
 					<tr>
 						<th id="account">Already have an account ?</th>
-						<th><a href="petsitter-dashboard.html" id="login">Login now</a></th>
+						<th><a href="petsitter-dashboard" id="login">Login now</a></th>
 					</tr>
 				</table>
+
+	</div>
+</span>
 	</div>
    <a href="index.html">Help</a>
 </header>
