--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
   <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     
+	  
+	  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   </head>
 
 <body>
@@ -20,7 +23,7 @@
    <a href="index.html">🔍 Search a pet-sitter</a>
    <a href="petsitter-registration.html">♡ Become a pet-sitter</a>
    <a href="index.html">🐾 Discover our services</a>
-  <div class="popup" onclick="myFunction()">Sign up / Login <span class="popuptext" id="myPopup"> <div class="card-rectangle">
+  <div class="popup" onclick="myFunction()">Sign up / Login<span class="popuptext" id="myPopup"> <div class="card-rectangle">
 			<h1>Sign up for a free account</h1>
 			<ul class="list-incolumn">
 				<li>
