--- a/petsittersignup.html
+++ b/petsittersignup.html
@@ -15,11 +15,11 @@
     	 <div class="card-rectangle">
 			<h1>Sign up for a free account</h1>
 			<ul class="list-incolumn">
-				<li>
-					<a href="petsitter-dashboard.html" class="btn-white">Continue with Facebook</a>
+				<li class="btn-white">
+					<a href="petsitter-dashboard.html">Continue with Facebook</a>
 				</li>
-				<li>
-					<a href="petsitter-dashboard.html" class="btn-white">Continue with Google</a>		
+				<li class="btn-white">
+					<a href="petsitter-dashboard.html">Continue with Google</a>		
 				</li>
 				<li>
 					<a href="petsitter-dashboard.html" class="btn-black">Continue with Apple</a>
@@ -27,8 +27,8 @@
 					<p id="or">
 					Or
       				</p>
-				<li>
-					<a href="petsitter-registration.html" class="btn-white">Sign up with email</a>
+				<li class="btn-white">
+					<a href="petsitter-registration.html">Sign up with email</a>
 				</li>
 			</ul>
 				<table>
