--- a/petsittersignup.html
+++ b/petsittersignup.html
@@ -21,8 +21,8 @@
 				<li class="btn-white">
 					<a href="petsitter-dashboard.html">Continue with Google</a>		
 				</li>
-				<li>
-					<a href="petsitter-dashboard.html" class="btn-black">Continue with Apple</a>
+				<li class="btn-black">
+					<a href="petsitter-dashboard.html">Continue with Apple</a>
 				</li>
 					<p id="or">
 					Or
