--- a/petsittersignup.html
+++ b/petsittersignup.html
@@ -28,7 +28,7 @@
 					Or
       				</p>
 				<li class="btn-white">
-					<a href="petsitter-registration.html">Sign up with email</a>
+					<a href="petsitter-registration.html" class="link">Sign up with email</a>
 				</li>
 			</ul>
 				<table>
