--- a/aboutus.html
+++ b/aboutus.html
@@ -26,7 +26,7 @@
 
 <h1>Find out more about us!</h1>
 
-<table class="table-style">
+<table class="table-margin">
   <tr>
     <th><h2>Céleste</h2></th>
     <th><h2>Mathilde</h2></th>
@@ -35,16 +35,16 @@
   </tr>
 
   <tr>
-    <td><a href="https://celeste-herrmann.github.io/my-profile/" target="_blank"><img src="images/celeste2.jpg" class="avatar-style"></a></td>
-    <td><a href="https://celeste-herrmann.github.io/my-profile/" target="_blank"><img src="images/celeste2.jpg" class="avatar-style"></a></td>
-    <td><a href="https://celeste-herrmann.github.io/my-profile/" target="_blank"><img src="images/celeste2.jpg" class="avatar-style"></a></td>
-    <td><a href="https://celeste-herrmann.github.io/my-profile/" target="_blank"><img src="images/celeste2.jpg" class="avatar-style"></a></td>
+    <td><a href="https://celeste-herrmann.github.io/my-profile/" target="_blank"><img src="images/celeste2.jpg" class="avatar-big"></a></td>
+    <td><a href="https://celeste-herrmann.github.io/my-profile/" target="_blank"><img src="images/celeste2.jpg" class="avatar-big"></a></td>
+    <td><a href="https://celeste-herrmann.github.io/my-profile/" target="_blank"><img src="images/celeste2.jpg" class="avatar-big"></a></td>
+    <td><a href="https://celeste-herrmann.github.io/my-profile/" target="_blank"><img src="images/celeste2.jpg" class="avatar-big"></a></td>
   </tr>
 </table>
 
 <footer class="footer-color">
 <div>
-  <a href="#">About us</a>
+  <a href="aboutus.html" class="footertext-size>About us</a>
   <a href="#">Terms of use</a>
 </div>
 <div>
