--- a/search.html
+++ b/search.html
@@ -155,7 +155,7 @@
   </table>
 
   <p class="texte-alignment">
-   <a href="#" class="btn-green"> Filter <a/>
+   <a href="search.html" class="btn-green"> Filter <a/>
   </p> 
 
 </div>
