--- a/aboutus.html
+++ b/aboutus.html
@@ -36,9 +36,9 @@
 
   <tr>
     <td><a href="https://celeste-herrmann.github.io/my-profile/" target="_blank"><img src="images/celeste2.jpg" class="avatar-style"></a></td>
-    <td><a href="https://mathilde-couturier.github.io/my-profile/" target="_blank"><img src="images/mathilde.jpg" class="avatar-style"></a></td>
-    <td><a href="https://celeste-herrmann.github.io/my-profile/" target="_blank"><img src="images/celeste2.jpg" class="avatar-style"></a></td>
-    <td><a href="https://celeste-herrmann.github.io/my-profile/" target="_blank"><img src="images/celeste2.jpg" class="avatar-style"></a></td>
+    <td><a href="https://mathilde-couturier.github.io/my-profile/" target="_blank"><img src="images/mathilde.png" class="avatar-style"></a></td>
+    <td><a href="https://arnaud-graff.github.io/my-profile/" target="_blank"><img src="images/arnaud.jpg" class="avatar-style"></a></td>
+    <td><a href="https://gaelle-chretien.github.io/my-profile/" target="_blank"><img src="images/gaelle.jpg" class="avatar-style"></a></td>
   </tr>
 </table>
 
