--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
 <footer class="footer-color">
 <div>
-  <a href="#">About us</a>
+  <a href="aboutus.html">About us</a>
   <a href="#">Terms of use</a>
 </div>
 <div>
