--- a/petsitter-dashboard.html
+++ b/petsitter-dashboard.html
@@ -493,7 +493,7 @@ section:after {
 
 <footer class="footer-color">
 <div>
-  <a href="#" class="footertext-size">About us</a>
+  <a href="aboutus.html" class="footertext-size">About us</a>
   <a href="#" class="footertext-size">Terms of use</a>
 </div>
 <div>
