--- a/aboutus.html
+++ b/aboutus.html
@@ -24,7 +24,7 @@
    <a href="index.html">Help</a>
 </header>
 
-<h1>Find out more about us!</h1>
+<h1 id=h1-adjustment>Find out more about us!</h1>
 
 <table class="table-margin">
   <tr>
@@ -35,10 +35,10 @@
   </tr>
 
   <tr>
-    <td><a href="https://celeste-herrmann.github.io/my-profile/" target="_blank"><img src="images/celeste2.jpg" class="avatar-style"></a></td>
-    <td><a href="https://mathilde-couturier.github.io/my-profile/" target="_blank"><img src="images/mathilde.png" class="avatar-style"></a></td>
-    <td><a href="https://arnaud-graff.github.io/my-profile/" target="_blank"><img src="images/arnaud.jpg" class="avatar-style"></a></td>
-    <td><a href="https://gaelle-chretien.github.io/my-profile/" target="_blank"><img src="images/gaelle.jpg" class="avatar-style"></a></td>
+    <td><a href="https://celeste-herrmann.github.io/my-profile/" target="_blank"><img src="images/celeste2.jpg" class="avatar-big"></a></td>
+    <td><a href="https://mathilde-couturier.github.io/my-profile/" target="_blank"><img src="images/mathilde.png" class="avatar-big"></a></td>
+    <td><a href="https://arnaud-graff.github.io/my-profile/" target="_blank"><img src="images/arnaud.jpg" class="avatar-big"></a></td>
+    <td><a href="https://gaelle-chretien.github.io/my-profile/" target="_blank"><img src="images/gaelle.jpg" class="avatar-big"></a></td>
   </tr>
 </table>
 
@@ -62,7 +62,7 @@
        <i class="fab fa-facebook"></i></a>
     </li>
     <li>
-      <a href="#">
+      <a href="https://www.instagram.com/keypers.ieseg/">
        <i class="fab fa-instagram"></i></a>
     </li>
   </ul>
