--- a/aboutus.html
+++ b/aboutus.html
@@ -35,7 +35,7 @@
   </tr>
 
   <tr>
-    <td><a href="https://celeste-herrmann.github.io/my-profile/" target="_blank"><img src="images/celeste2.jpg" class="avatar-big"></a></td>
+    <td><a href="https://celeste-herrmann.github.io/my-profile/" target="_blank"><img src="images/celeste2.JPG" class="avatar-big"></a></td>
     <td><a href="https://mathilde-couturier.github.io/my-profile/" target="_blank"><img src="images/mathilde.png" class="avatar-big"></a></td>
     <td><a href="https://arnaud-graff.github.io/my-profile/" target="_blank"><img src="images/arnaud.jpg" class="avatar-big"></a></td>
     <td><a href="https://gaelle-chretien.github.io/my-profile/" target="_blank"><img src="images/gaelle.jpg" class="avatar-big"></a></td>
