--- a/aboutus.html
+++ b/aboutus.html
@@ -44,7 +44,7 @@
 
 <footer class="footer-color">
 <div>
-  <a href="aboutus.html" class="footertext-size>About us</a>
+  <a href="aboutus.html" class="footertext-size">About us</a>
   <a href="#">Terms of use</a>
 </div>
 <div>
