--- a/aboutus.html
+++ b/aboutus.html
@@ -24,7 +24,7 @@
    <a href="index.html">Help</a>
 </header>
 
-<h1 id=h1-adjustment>Find out more about us!</h1>
+<h1 id="h1-adjustment">Find out more about us!</h1>
 
 <table class="table-margin">
   <tr>
