--- a/search.html
+++ b/search.html
@@ -48,11 +48,11 @@
     <input type="text" name="Starting date" placeholder="From 20/09" class="smallerinput-style">
     <input type="text" name="Ending date" placeholder="To 24/09" class="smallerinput-style">
  <!-- Trigger/Open The Modal -->
-    <button id="myBtn">+filters</button>
+    <button>+filters</button>
 
 
 <!-- The Modal -->
-   <div id="myModal" class="modal">
+   <div class="modal">
 
 <!-- Modal content -->
    <div class="modal-content">
@@ -171,10 +171,10 @@
 <div class="cards-layout">
 <section class="container-style">
   <div class="avatar-margin">
- <a href="profilepage.html"><img src="images/profilepicture.jpg" class="avatar-style"></a>
+ <img src="images/profilepicture.jpg" class="avatar-style">
 </div>
 <div>
-    <h2 class="items-margin">Name<span class="rating-style">🐾🐾🐾🐾🐾 (6)</span></h2>
+  <h2 class="items-margin"><a href="profilepage.html">Name</a><span class="rating-style">🐾🐾🐾🐾🐾 (6)</span></h2>
     <h4>City and distance from your location </h4>
       <p>23 years-old student ready to take care of your pet! Living in an apartment near a park I am available all year round for different type of services. Experienced with dogs, cats and rodents, I can also provide medical treatments.</p>
 </div>
@@ -187,10 +187,26 @@
 
 <section class="container-style">
   <div class="avatar-margin">
-    <a href="profilepage.html"><img src="images/profilepicture.jpg" class="avatar-style"></a>
+   <img src="images/profilepicture.jpg" class="avatar-style">
 </div>
 <div>
-  <h2 class="items-margin"> Name <span class="rating-style">🐾🐾🐾🐾🐾 (6)</span></h2>
+  <h2 class="items-margin"> <a href="profilepage.html"> Name </a> <span class="rating-style">🐾🐾🐾🐾🐾 (6)</span></h2>
+    <h4>City and distance from your location</h4>
+      <p>23 years-old student ready to take care of your pet! Living in an apartment near a park I am available all year round for different type of services. Experienced with dogs, cats and rodents, I can also provide medical treatments.</p>
+</div>
+<div class="price-align">
+  <p>Starting price
+    <br> <span class="price-style">17£</span>
+    <br>/per day</p>
+</div>
+</section>
+
+<section class="container-style">
+  <div class="avatar-margin">
+   <img src="images/profilepicture.jpg" class="avatar-style">
+</div>
+<div>
+  <h2 class="items-margin"><a href="profilepage.html">Name</a><span class="rating-style">🐾🐾🐾🐾🐾 (6)</span></h2>
     <h4>City and distance from your location </h4>
       <p>23 years-old student ready to take care of your pet! Living in an apartment near a park I am available all year round for different type of services. Experienced with dogs, cats and rodents, I can also provide medical treatments.</p>
 </div>
@@ -203,26 +219,10 @@
 
 <section class="container-style">
   <div class="avatar-margin">
-    <a href="profilepage.html"><img src="images/profilepicture.jpg" class="avatar-style"></a>
+<img src="images/profilepicture.jpg" class="avatar-style">
 </div>
 <div>
-  <h2 class="items-margin"> Name <span class="rating-style">🐾🐾🐾🐾🐾 (6)</span></h2>
-    <h4>City and distance from your location </h4>
-      <p>23 years-old student ready to take care of your pet! Living in an apartment near a park I am available all year round for different type of services. Experienced with dogs, cats and rodents, I can also provide medical treatments.</p>
-</div>
-<div class="price-align">
-  <p>Starting price
-    <br> <span class="price-style">17£</span>
-    <br>/per day</p>
-</div>
-</section>
-
-<section class="container-style">
-  <div class="avatar-margin">
-  <a href="profilepage.html"><img src="images/profilepicture.jpg" class="avatar-style"></a>
-</div>
-<div>
-  <h2 class="items-margin"> Name <span class="rating-style">🐾🐾🐾🐾🐾 (6)</span></h2>
+  <h2 class="items-margin"><a href="profilepage.html">Name</a><span class="rating-style">🐾🐾🐾🐾🐾 (6)</span></h2>
     <h4>City and distance from your location </h4>
       <p>23 years-old student ready to take care of your pet! Living in an apartment near a park I am available all year round for different type of services. Experienced with dogs, cats and rodents, I can also provide medical treatments.</p>
 </div>
