--- a/search.html
+++ b/search.html
@@ -48,7 +48,7 @@
     <input type="text" name="Starting date" placeholder="From 20/09" class="smallerinput-style">
     <input type="text" name="Ending date" placeholder="To 24/09" class="smallerinput-style">
  <!-- Trigger/Open The Modal -->
-    <button>+filters</button>
+    <button id="btn-align">+filters</button>
 
 
 <!-- The Modal -->
@@ -257,7 +257,7 @@
 
 <footer class="footer-color">
 <div>
-  <a href="#" class="footertext-size">About us</a>
+  <a href="aboutus.html" class="footertext-size">About us</a>
   <a href="#">Terms of use</a>
 </div>
 <div>
@@ -275,7 +275,7 @@
        <i class="fab fa-facebook"></i></a>
     </li>
     <li>
-      <a href="#">
+      <a href="https://www.instagram.com/keypers.ieseg/?hl=fr">
        <i class="fab fa-instagram"></i></a>
     </li>
   </ul>
