--- a/petsitter-registration.html
+++ b/petsitter-registration.html
@@ -9,7 +9,7 @@
    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 </head>
 
-<body id="body-adjustment>
+<body>
 
 <header class="header-style">
    <a href="index.html"> <img src="images/logo.jpg" alt="Logo" class="logo-size"> </a>
