--- a/petsitter-registration.html
+++ b/petsitter-registration.html
@@ -16,7 +16,46 @@
    <a href="index.html">🔍 Search a pet-sitter</a>
    <a href="petsitter-registration.html">♡ Become a pet-sitter</a>
    <a href="index.html">🐾 Discover our services</a>
-   <a href="petsittersignup.html">Sign up / Login</a>
+   <!-- Trigger/Open The Modal -->
+    <button id="myBtn">Sign up / Login</button>
+
+  <!-- The Modal -->
+   <div id="myModal" class="modal">
+
+  <!-- Modal content -->
+   <div class="content-modal">
+
+  <!-- Our content -->
+    <div class="card-rectangle">
+			<h5>Sign up for a free account</h5>
+			<ul class="list-incolumn">
+				<li class="btn-white">
+					<a href="petsitter-dashboard.html" class="link-black">Continue with Facebook</a>
+				</li>
+				<li class="btn-white">
+					<a href="petsitter-dashboard.html" class="link-black">Continue with Google</a>		
+				</li>
+				<li class="btn-black">
+					<a href="petsitter-dashboard.html" class="link-white">Continue with Apple</a>
+				</li>
+					<p id="or">
+					Or
+      				</p>
+				<li class="btn-white">
+					<a href="petsitter-registration.html" class="link-black">Sign up with email</a>
+				</li>
+			</ul>
+				<table>
+					<tr>
+						<th id="account">Already have an account ?</th>
+						<th><a href="petsitter-dashboard.html" id="login">Login now</a></th>
+					</tr>
+				</table>
+
+	</div>
+     </div>
+     <!-- End of our content -->
+     </div>
    <a href="index.html">Help</a>
 </header>
 
@@ -119,7 +158,7 @@
 
 <footer class="footer-color">
 <div>
-  <a href="#">About us</a>
+  <a href="aboutus.html">About us</a>
   <a href="#">Terms of use</a>
 </div>
 <div>
@@ -143,6 +182,33 @@
   </ul>
 </div>
 </footer>
-  
+
+  <script type="text/javascript">
+// Get the modal
+var modal = document.getElementById("myModal");
+
+// Get the button that opens the modal
+var btn = document.getElementById("myBtn");
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks on the button, open the modal 
+btn.onclick = function() {
+  modal.style.display = "block";
+}
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+  modal.style.display = "none";
+}
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+  if (event.target == modal) {
+    modal.style.display = "none";
+  }
+}
+</script>
 </body>
 
