--- a/search.html
+++ b/search.html
@@ -8,7 +8,7 @@
    <meta name="description" content="Key'Pers is an online petsitting platform.">
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" type="text/css" href="css/style.css">
+   <link rel="stylesheet" type="text/css" href="search.css">
    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
   </head>
@@ -20,7 +20,7 @@
    <a href="index.html">🔍 Search a pet-sitter</a>
    <a href="petsitter-registration.html">♡ Become a pet-sitter</a>
    <a href="index.html">🐾 Discover our services</a>
-   <a href="petsittersignup.html">Sign up / Login</a>
+   <a href="#">Sign up / Login</a>
    <a href="index.html">Help</a>
 </header>
 
@@ -47,184 +47,68 @@
     <input type="text" name="Location" placeholder="Manchester" class="smallerinput-style">
     <input type="text" name="Starting date" placeholder="From 20/09" class="smallerinput-style">
     <input type="text" name="Ending date" placeholder="To 24/09" class="smallerinput-style">
- <!-- Trigger/Open The Modal -->
-    <button id="btn-align">+filters</button>
-
-
-<!-- The Modal -->
-   <div class="modal">
-
-<!-- Modal content -->
-   <div class="modal-content">
-
-<!-- Our content -->
-    <div class="container" id="filter">
-
-  <p>
-    <a href="search.html" class="btn-grey close"> Back <a/>
-  </p>
-
-  <h3 > Additional filters </h3>
-
-  <table class="table-style">
-    <tr>
-      <td>
-        <div>
-          <form class="card-design">
-            <p>
-            <input type="checkbox" value="Apartment">
-            <label for="accomodation1"> Apartment</label><br>
-            </p>
-            <p>
-            <input type="checkbox" value="House">
-            <label for="accomodation2"> House</label><br>
-            </p>
-            <p>
-            <input type="checkbox" value="Garden">
-            <label for="accomodation3"> Garden</label><br>
-            </p>
-            <p>
-            <input type="checkbox" value="Householdwithchildren">
-            <label for="accomodation4"> Household with children</label>
-            </p>
-          </form>
-        </div>  
-      </td>
-
-      <td>
-        <div>
-          <form class="card-design">
-            <p>
-            <input type="checkbox" value="petsittingwithoutdog">
-            <label for="petistting1"> Petsitting without a dog</label><br>
-            </p>
-            <p>
-            <input type="checkbox" value="petsittingwithoutcat">
-            <label for="petsitting2"> Petsitting without a cat</label><br>
-            </p>
-            <p>
-            <input type="checkbox" value="petsitterwithoutanimal">
-            <label for="petsitting3"> Petsitting without an other animal</label>
-            </p>
-          </form>
-        </div>
-      </td>
-
-      <td>
-        <div class="card-design">
-          <p class="card-padding">Additional services available:</p>
-          <form style="padding-bottom: 5px">
-            <p>
-            <input type="checkbox" value="grooming">
-            <label for="additionalservices1"> Grooming</label><br>
-            </p>
-            <p>
-            <input type="checkbox" value="cancellationwithoutcharges">
-            <label for="additionalservices2"> Cancellation without charges</label><br>
-            </p>
-            <p>
-            <input type="checkbox" value="specialtreatments">
-            <label for="additionalservices3"> Administer special treatments</label>
-            </p> 
-          </form>
-        </div> 
-      </td>
-    </tr> 
-  </table>
-
-  <table>
-    <tr>
-      <td>
-        <div class="card-form">
-        <form>
-          <label for="price">Price range per day (between 0£ and 100£):</label>
-          <input type="range" class="price" name="price" min="0£" max="100£">
-        </form>  
-        </div>
-      </td>
-
-      <td>
-       <div class="card-form">
-       <form>
-          <label for="distance">Distance preference (between 0km and 40km):</label>
-          <input type="range" id="distance" name="distance" min="0km" max="40km">
-       </form> 
-       </div> 
-      </td>
-    </tr>
-  </table>
-
-  <p class="texte-alignment">
-   <a href="search.html" class="btn-green"> Filter <a/>
-  </p> 
-
-</div>
-  </div>
-<!-- End of our content -->
-
-
-</div>
+    <a href="filter.html" id="btn-align">+filters</a>
   </form>
 </nav>
 
 <div class="flex-container">
 
 <div class="cards-layout">
-<section class="container-style">
-  <div class="avatar-margin">
- <img src="images/profilepicture.jpg" class="avatar-style">
-</div>
-<div>
-  <h2 class="items-margin"><a href="profilepage.html">Name</a><span class="rating-style">🐾🐾🐾🐾🐾 (6)</span></h2>
-    <h4>City and distance from your location </h4>
-      <p>23 years-old student ready to take care of your pet! Living in an apartment near a park I am available all year round for different type of services. Experienced with dogs, cats and rodents, I can also provide medical treatments.</p>
-</div>
-<div class="price-align">
-  <p>Starting price
-    <br> <span class="price-style">17£</span>
-    <br>/per day</p>
-</div>
-</section>
-
-<section class="container-style">
-  <div class="avatar-margin">
-   <img src="images/profilepicture.jpg" class="avatar-style">
-</div>
-<div>
-  <h2 class="items-margin"> <a href="profilepage.html"> Name </a> <span class="rating-style">🐾🐾🐾🐾🐾 (6)</span></h2>
-    <h4>City and distance from your location</h4>
-      <p>23 years-old student ready to take care of your pet! Living in an apartment near a park I am available all year round for different type of services. Experienced with dogs, cats and rodents, I can also provide medical treatments.</p>
-</div>
-<div class="price-align">
-  <p>Starting price
-    <br> <span class="price-style">17£</span>
-    <br>/per day</p>
-</div>
-</section>
-
-<section class="container-style">
-  <div class="avatar-margin">
-   <img src="images/profilepicture.jpg" class="avatar-style">
-</div>
-<div>
-  <h2 class="items-margin"><a href="profilepage.html">Name</a><span class="rating-style">🐾🐾🐾🐾🐾 (6)</span></h2>
-    <h4>City and distance from your location </h4>
-      <p>23 years-old student ready to take care of your pet! Living in an apartment near a park I am available all year round for different type of services. Experienced with dogs, cats and rodents, I can also provide medical treatments.</p>
-</div>
-<div class="price-align">
-  <p>Starting price
-    <br> <span class="price-style">17£</span>
-    <br>/per day</p>
-</div>
-</section>
-
-<section class="container-style">
+<section class="card-style">
   <div class="avatar-margin">
 <img src="images/profilepicture.jpg" class="avatar-style">
 </div>
 <div>
-  <h2 class="items-margin"><a href="profilepage.html">Name</a><span class="rating-style">🐾🐾🐾🐾🐾 (6)</span></h2>
-    <h4>City and distance from your location </h4>
+    <h2 class="items-margin"> <a href="profilepage.html">Name</a><span class="rating-style">🐾🐾🐾🐾🐾 (6)</span></h2>
+    <h3>City and distance from your location </h3>
+      <p>23 years-old student ready to take care of your pet! Living in an apartment near a park I am available all year round for different type of services. Experienced with dogs, cats and rodents, I can also provide medical treatments.</p>
+</div>
+<div class="price-align">
+  <p>Starting price
+    <br> <span class="price-style">17£</span>
+    <br>/per day</p>
+</div>
+</section>
+
+<section class="card-style">
+  <div class="avatar-margin">
+    <a href="profilepage.html"><img src="images/profilepicture.jpg" class="avatar-style"></a>
+</div>
+<div>
+  <h2 class="items-margin"> Name <span class="rating-style">🐾🐾🐾🐾🐾 (6)</span></h2>
+    <h3>City and distance from your location </h3>
+      <p>23 years-old student ready to take care of your pet! Living in an apartment near a park I am available all year round for different type of services. Experienced with dogs, cats and rodents, I can also provide medical treatments.</p>
+</div>
+<div class="price-align">
+  <p>Starting price
+    <br> <span class="price-style">17£</span>
+    <br>/per day</p>
+</div>
+</section>
+
+<section class="card-style">
+  <div class="avatar-margin">
+    <a href="profilepage.html"><img src="images/profilepicture.jpg" class="avatar-style"></a>
+</div>
+<div>
+  <h2 class="items-margin"> <a href="">Name </a> <span class="rating-style">🐾🐾🐾🐾🐾 (6)</span></h2>
+    <h3>City and distance from your location </h3>
+      <p>23 years-old student ready to take care of your pet! Living in an apartment near a park I am available all year round for different type of services. Experienced with dogs, cats and rodents, I can also provide medical treatments.</p>
+</div>
+<div class="price-align">
+  <p>Starting price
+    <br> <span class="price-style">17£</span>
+    <br>/per day</p>
+</div>
+</section>
+
+<section class="card-style">
+  <div class="avatar-margin">
+  <a href="profilepage.html"><img src="images/profilepicture.jpg" class="avatar-style"></a>
+</div>
+<div>
+  <h2 class="items-margin"> Name <span class="rating-style">🐾🐾🐾🐾🐾 (6)</span></h2>
+    <h3>City and distance from your location </h3>
       <p>23 years-old student ready to take care of your pet! Living in an apartment near a park I am available all year round for different type of services. Experienced with dogs, cats and rodents, I can also provide medical treatments.</p>
 </div>
 <div class="price-align">
@@ -258,7 +142,7 @@
 
 <footer class="footer-color">
 <div>
-  <a href="aboutus.html" class="footertext-size">About us</a>
+  <a href="#" class="footertext-size">About us</a>
   <a href="#">Terms of use</a>
 </div>
 <div>
@@ -276,41 +160,12 @@
        <i class="fab fa-facebook"></i></a>
     </li>
     <li>
-      <a href="https://www.instagram.com/keypers.ieseg/?hl=fr">
+      <a href="#">
        <i class="fab fa-instagram"></i></a>
     </li>
   </ul>
 </div>
 </footer>
-
-<script type="text/javascript">
-// Get the modal
-var modal = document.getElementById("myModal");
-
-// Get the button that opens the modal
-var btn = document.getElementById("myBtn");
-
-// Get the <span> element that closes the modal
-var span = document.getElementsByClassName("close")[0];
-
-// When the user clicks on the button, open the modal 
-btn.onclick = function() {
-  modal.style.display = "block";
-}
-
-// When the user clicks on <span> (x), close the modal
-span.onclick = function() {
-  modal.style.display = "none";
-}
-
-// When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-  if (event.target == modal) {
-    modal.style.display = "none";
-  }
-}
-</script>
-
 
 </body>
 
