--- a/petsitter-registration.html
+++ b/petsitter-registration.html
@@ -66,13 +66,13 @@
         <td class="texte-align"
           <form>
            <label for="civility">Civility*:</label><br>
-           <input type="text" class="civility" name="civility"><br>
+           <input type="text" class="box-style" name="civility"><br>
           </form>
         </td>
         <td class="texte-alignment"
           <form>
            <label for="phone-number">Phone number*:</label><br>
-           <input type="text" class="phone-number" name="phone-number"><br>
+           <input type="text" class="box-style" name="phone-number"><br>
           </form>
         </td>
       </tr>
@@ -80,13 +80,13 @@
         <td class="texte-align"
           <form>
            <label for="first-name">First Name*:</label><br>
-           <input type="text" class="first-name" name="first-name"><br>
+           <input type="text" class="box-style" name="first-name"><br>
           </form>
         </td>
         <td class="texte-alignment"
           <form>
            <label for="email-adress">Email adress*:</label><br>
-           <input type="email" class="email-adress" name="email-adress"><br>
+           <input type="email" class="box-style" name="email-adress"><br>
           </form>
         </td>
       </tr>
@@ -94,13 +94,13 @@
         <td class="texte-align"
           <form>
            <label for="surname">Surname*:</label><br>
-           <input type="text" class="surname" name="surname"><br>
+           <input type="text" class="box-style" name="surname"><br>
           </form>
         </td>
         <td class="texte-alignment"
           <form>
            <label for="email-confirmation">Email Confirmation*:</label><br>
-           <input type="text" class="email-confirmation" name="email-confirmation"><br>
+           <input type="text" class="box-style" name="email-confirmation"><br>
           </form>
         </td>
       </tr>
@@ -108,13 +108,13 @@
         <td class="texte-align"
           <form>
            <label for="adress">Adress*:</label><br>
-           <input type="text" class="adress" name="adress"><br>
+           <input type="text" class="box-style" name="adress"><br>
           </form>
         </td>
         <td class="texte-alignment"
           <form>
            <label for="pwd">Password*:</label><br>
-           <input type="password" class="pwd" name="pwd"><br>
+           <input type="password" class="box-style" name="pwd"><br>
           </form>
         </td>
       </tr>
@@ -122,13 +122,13 @@
         <td class="texte-align"
           <form>
            <label for="zip-code">Zip Code*:</label><br>
-           <input type="text" class="zip-code" name="zip-code"><br>
+           <input type="text" class="box-style" name="zip-code"><br>
           </form>
         </td>
         <td class="texte-alignment"
           <form>
            <label for="password-confirmation">Password Confirmation*:</label><br>
-           <input type="password" class="password-confirmation" name="password-confirmation"><br>
+           <input type="password" class="box-style" name="password-confirmation"><br>
           </form>
         </td>
       </tr>
@@ -136,13 +136,13 @@
         <td class="texte-align"
           <form>
            <label for="birth-date">Birth Date*:</label><br>
-           <input type="date" class="birth-date" name="birth-date"><br>
+           <input type="date" class="box-style" name="birth-date"><br>
           </form>
         </td>
         <td class="texte-alignment"
           <form>
            <label for="sponsor-email">Sponsor's email:</label><br>
-           <input type="email" class="sponsor-email" name="sponsor-semail"><br>
+           <input type="email" class="box-style" name="sponsor-semail"><br>
           </form>
         </td>
       </tr>
