--- a/petsitter-registration.html
+++ b/petsitter-registration.html
@@ -55,6 +55,7 @@
 	</div>
      </div>
      <!-- End of our content -->
+	   
      </div>
    <a href="index.html">Help</a>
 </header>
@@ -64,10 +65,10 @@
     <table class="table-style">
       <tr>
         <td class="texte-align"
-          <form>
-           <label for="civility">Civility*:</label><br>
-           <input type="text" class="box-style" name="civility"><br>
-          </form>
+	    <select id="civility" name="choose civility" class="smallerform-style">
+          <option value="A">Woman</option>
+          <option value="C">Man</option>
+	    </select>
         </td>
         <td class="texte-alignment"
           <form>
