--- a/petsitter-registration.html
+++ b/petsitter-registration.html
@@ -65,10 +65,10 @@
     <table class="table-style">
       <tr>
         <td class="texte-align"
-	    <select id="civility" name="choose civility" class="smallerform-style">
-          <option value="A">Woman</option>
-          <option value="C">Man</option>
-	    </select>
+	    <form>
+           <label for="civility">Civility*:</label><br>
+           <input type="text" class="box-style" name="civility"><br>
+          </form>
         </td>
         <td class="texte-alignment"
           <form>
