--- a/profilepage.html
+++ b/profilepage.html
@@ -11,9 +11,9 @@
 
 
 <header class="header-style">
- <a href="#"> <img src="images/logo.jpg" alt="Logo" class="logo-size"> </a>
+ <a href="index.html"> <img src="images/logo.jpg" alt="Logo" class="logo-size"> </a>
 <a href="#">🔍 Search a pet-sitter</a>
-<a href="#">♡ Become a pet-sitter</a>
+<a href="petsitter-registration.html">♡ Become a pet-sitter</a>
 <a href="#">🐾 Discover our services</a>
 <a href="#">Sign up / Login</a>
 <a href="#">Help</a>
@@ -166,31 +166,31 @@
 </div>
 
 
-
 <footer class="footer-color">
-  <ul class="list-align">
-            <li>About us</li>
-            <li>Terms of use</li>
-          </ul>
-
-          <ul class="icon-align">
-           <li>
-            <a href="#"></a>
-            <i class="fab fa-youtube"></i>
-          </li>
-           <li>
-            <a href="#"></a>
-            <i class="fas fa-at"></i>
-          </li>
-          <li>
-            <a href="#"></a>
-            <i class="fab fa-facebook"></i>
-          </li>
-          <li>
-            <a href="https://www.instagram.com/keypers.ieseg/?hl=fr"></a>
-            <i class="fab fa-instagram"></i>
-          </li>
-      </ul>
+<div>
+  <a href="aboutus.html" class="footertext-size">About us</a>
+  <a href="#">Terms of use</a>
+</div>
+<div>
+  <ul class="icon-align">
+    <li>
+     <a href="#">
+      <i class="fab fa-youtube"></i></a>
+    </li>
+    <li>
+      <a href="#">
+       <i class="fas fa-at"></i></a>
+    </li>
+    <li>
+      <a href="#">
+       <i class="fab fa-facebook"></i></a>
+    </li>
+    <li>
+      <a href="https://www.instagram.com/keypers.ieseg/">
+       <i class="fab fa-instagram"></i></a>
+    </li>
+  </ul>
+</div>
 </footer>
 
 </body>
