--- a/petsittersignup.html
+++ b/petsittersignup.html
@@ -16,13 +16,13 @@
 			<h1>Sign up for a free account</h1>
 			<ul class="list-incolumn">
 				<li class="btn-white">
-					<a href="petsitter-dashboard.html" class="link-black">Continue with Facebook</a>
+					<a href="petsitter-registration.html" class="link-black">Continue with Facebook</a>
 				</li>
 				<li class="btn-white">
-					<a href="petsitter-dashboard.html" class="link-black">Continue with Google</a>		
+					<a href="petsitter-registration.html" class="link-black">Continue with Google</a>		
 				</li>
 				<li class="btn-black">
-					<a href="petsitter-dashboard.html" class="link-white">Continue with Apple</a>
+					<a href="petsitter-registration.html" class="link-white">Continue with Apple</a>
 				</li>
 					<p id="or">
 					Or
