--- a/petsitterinformation.html
+++ b/petsitterinformation.html
@@ -30,7 +30,7 @@
                 <div class="green-box-tittle">
                     <h1>Personnal information</h1>
                 </div>
-                <div class="selectors">
+                <div class="smallerform-style">
                     <table class="table-dropdown">
                         <tr>
                             <td>
