--- a/petsitter-registration.html
+++ b/petsitter-registration.html
@@ -147,14 +147,13 @@
           </form>
         </td>
       </tr>
-    </table>
-
-    <p class="font-size">
-      Fields marked with * are mandatory
-    </p>  
-    <p class="text-alignment">
-      <a href="petsitter-dashboard.html" class="btn-green"> Register <a/>
-    </p>    
+      <tr>
+	<td class="font-size">Fields marked with * are mandatory </td>
+	<td class="text-alignment">
+		<a href="petsitter-dashboard.html" class="btn-green"> Register <a/>
+        </td>
+ 	</tr>
+    </table>  
   </div>
 
 <footer class="footer-color">
