--- a/petsitter-registration.html
+++ b/petsitter-registration.html
@@ -147,6 +147,8 @@
           </form>
         </td>
       </tr>
+    </table>
+    <table>
       <tr>
 	<td class="font-size">Fields marked with * are mandatory </td>
 	<td class="text-alignment">
