--- a/petsitter-dashboard.html
+++ b/petsitter-dashboard.html
@@ -95,7 +95,7 @@
 
 <footer class="footer-color">
 <div>
-  <a href="#" class="footertext-size">About us</a>
+  <a href="aboutus.html" class="footertext-size">About us</a>
   <a href="#" class="footertext-size">Terms of use</a>
 </div>
 <div>
