--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 
 <footer class="footer-color">
 <div>
-  <a href="aboutus.html">About us</a>
-  <a href="#">Terms of use</a>
+  <a href="aboutus.html" class="footertext-size">About us</a>
+  <a href="#" class="footertext-size">Terms of use</a>
 </div>
 <div>
   <ul class="icon-align">
