--- a/petsitterinformation.html
+++ b/petsitterinformation.html
@@ -142,30 +142,32 @@
 
     <!-- FOOTER -->
 
-    <footer>
-        <div class="footer-color">
-            <ul class="list-align">
-                <li>About us</li>
-                <li>Terms of use</li>
-            </ul>
-
+     <footer class="footer-color">
+         <div>
+            <a href="aboutus.html" class="footertext-size">About us</a>
+            <a href="#" class="footertext-size">Terms of use</a>
+           </div>
+    <div>
             <ul class="icon-align">
                 <li>
-                    <a href="#"></a>
-                    <i class="fab fa-youtube"></i>
+                    <a href="#">
+                    <i class="fab fa-youtube"></i></a>
                 </li>
                 <li>
-                    <a href="#"></a>
-                    <i class="fas fa-at"></i>
+                    <a href="#">
+                    <i class="fas fa-at"></i></a>
                 </li>
                 <li>
-                    <a href="#"></a>
-                    <i class="fab fa-facebook"></i>
+                    <a href="#">
+                    <i class="fab fa-facebook"></i></a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/keypers.ieseg/?hl=fr"></a>
-                    <i class="fab fa-instagram"></i>
+                    <a href="https://www.instagram.com/keypers.ieseg/?hl=fr">
+                    <i class="fab fa-instagram"></i></a>
                 </li>
             </ul>
         </div>
     </footer>
+    
+    </body>
+</html>
