--- a/petsitter-registration.html
+++ b/petsitter-registration.html
@@ -23,7 +23,7 @@
    <div id="myModal" class="modal">
 
   <!-- Modal content -->
-   <div class="content-modal">
+   <div class="content-modal2">
 
   <!-- Our content -->
     <div class="card-rectangle">
