--- a/search.html
+++ b/search.html
@@ -288,7 +288,7 @@
 var modal = document.getElementById("myModal");
 
 // Get the button that opens the modal
-var btn = document.getElementById("myBtn");
+var btn = document.getElementById("btn-align");
 
 // Get the <span> element that closes the modal
 var span = document.getElementsByClassName("close")[0];
