--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
    <div id="myModal" class="modal">
 
   <!-- Modal content -->
-   <div class="content-modal2">
+   <div class="content-modal">
 
   <!-- Our content -->
     <div class="card-rectangle">
