--- a/profilepage.html
+++ b/profilepage.html
@@ -15,7 +15,46 @@
 <a href="#">🔍 Search a pet-sitter</a>
 <a href="petsitter-registration.html">♡ Become a pet-sitter</a>
 <a href="#">🐾 Discover our services</a>
-<a href="#">Sign up / Login</a>
+ <!-- Trigger/Open The Modal -->
+    <button id="myBtn">Sign up / Login</button>
+
+  <!-- The Modal -->
+   <div id="myModal" class="modal">
+
+  <!-- Modal content -->
+   <div class="content-modal">
+
+  <!-- Our content -->
+    <div class="card-rectangle">
+			<h5>Sign up for a free account</h5>
+			<ul class="list-incolumn">
+				<li class="btn-white">
+					<a href="petsitter-registration.html" class="link-black">Continue with Facebook</a>
+				</li>
+				<li class="btn-white">
+					<a href="petsitter-registration.html" class="link-black">Continue with Google</a>		
+				</li>
+				<li class="btn-black">
+					<a href="petsitter-registration.html" class="link-white">Continue with Apple</a>
+				</li>
+					<p id="or">
+					Or
+      				</p>
+				<li class="btn-white">
+					<a href="petsitter-registration.html" class="link-black">Sign up with email</a>
+				</li>
+			</ul>
+				<table>
+					<tr>
+						<th id="account">Already have an account ?</th>
+						<th><a href="petsitter-dashboard.html" id="login">Login now</a></th>
+					</tr>
+				</table>
+
+	</div>
+     </div>
+     <!-- End of our content -->
+     </div>
 <a href="#">Help</a>
 </header>
 
