--- a/search.html
+++ b/search.html
@@ -52,7 +52,7 @@
 
 
 <!-- The Modal -->
-   <div class="modal">
+   <div id="myModal" class="modal">
 
 <!-- Modal content -->
    <div class="modal-content">
