--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <h1> Find the pet-sitter made for you! </h1>
   <table>
       <tr>
-        <td> <select id="pet" name="choose type of pet" class="form-style">
+        <td> <select id="pet" name="choose type of pet" class="form-style form-margin">
           <option value="A">Choose type of pet</option>
           <option value="B">Dog</option>
           <option value="C">Cat</option>
@@ -84,7 +84,7 @@
       </tr>
 
       <tr>
-        <td> <select id="services" name="choose type of services" class="form-style">
+        <td> <select id="services" name="choose type of services" class="form-style form-margin">
           <option value="1">Choose type of services</option>
           <option value="2">Boarding</option>
           <option value="3">Visit</option>
