--- a/search.html
+++ b/search.html
@@ -138,7 +138,7 @@
         <div class="card-form">
         <form>
           <label for="price">Price range per day (between 0£ and 100£):</label>
-          <input type="range" class="price" name="price" min="0£" max="100£">
+          <input type="range" class="cursor" name="price" min="0£" max="100£">
         </form>  
         </div>
       </td>
@@ -147,7 +147,7 @@
        <div class="card-form">
        <form>
           <label for="distance">Distance preference (between 0km and 40km):</label>
-          <input type="range" id="distance" name="distance" min="0km" max="40km">
+          <input type="range" class="cursor" name="distance" min="0km" max="40km">
        </form> 
        </div> 
       </td>
