--- a/petsitter-registration.html
+++ b/petsitter-registration.html
@@ -152,7 +152,7 @@
       <tr>
 	<td class="font-size">Fields marked with * are mandatory </td>
 	<td class="text-alignment">
-		<a href="petsitter-dashboard.html" class="btn-green"> Register <a/>
+		<a href="petsitterinformation.html" class="btn-green"> Register <a/>
         </td>
  	</tr>
     </table>  
