--- a/petsitterinformation.html
+++ b/petsitterinformation.html
@@ -6,7 +6,7 @@
     <title>Key'Pers, connecting pet lovers</title>
     <meta name="description" content="Key'Pers is an online petsitting platform.">
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="petsitter information.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 
 </head>
@@ -14,66 +14,27 @@
 <body>
 
     <!-- HEADER -->
-    <header class="header-style">
+   <header class="header-style">
    <a href="index.html"> <img src="images/logo.jpg" alt="Logo" class="logo-size"> </a>
    <a href="index.html">🔍 Search a pet-sitter</a>
    <a href="petsitter-registration.html">♡ Become a pet-sitter</a>
    <a href="index.html">🐾 Discover our services</a>
-      <!-- Trigger/Open The Modal -->
-    <button id="myBtn">Sign up / Login</button>
-
-  <!-- The Modal -->
-   <div id="myModal" class="modal">
-
-  <!-- Modal content -->
-   <div class="content-modal">
-
-  <!-- Our content -->
-    <div class="card-rectangle">
-			<h5>Sign up for a free account</h5>
-			<ul class="list-incolumn">
-				<li class="btn-white">
-					<a href="petsitter-registration.html" class="link-black">Continue with Facebook</a>
-				</li>
-				<li class="btn-white">
-					<a href="petsitter-registration.html" class="link-black">Continue with Google</a>		
-				</li>
-				<li class="btn-black">
-					<a href="petsitter-registration.html" class="link-white">Continue with Apple</a>
-				</li>
-					<p id="or">
-					Or
-      				</p>
-				<li class="btn-white">
-					<a href="petsitter-registration.html" class="link-black">Sign up with email</a>
-				</li>
-			</ul>
-				<table>
-					<tr>
-						<th id="account">Already have an account ?</th>
-						<th><a href="petsitter-dashboard.html" id="login">Login now</a></th>
-					</tr>
-				</table>
-
-	</div>
-     </div>
-     <!-- End of our content -->
-     </div>
+   <a href="#">Sign up / Login</a>
    <a href="index.html">Help</a>
 </header>
 
     <!-- MAIN -->
-    <main>
+
         <div class="container">
             <div class="green-box">
-                <div class="green-box-tittle">
+                <div class="green-box-title">
                     <h1>Personnal information</h1>
                 </div>
-                <div class="smallerform-style">
+                <div>
                     <table class="table-dropdown">
                         <tr>
                             <td>
-                                <select id="accomodation" name="choose type of accomodation" class="selector-style">
+                                <select id="accomodation" name="choose type of accomodation" class="form-style">
                                     <option value="A">Type of accomodation</option>
                                     <option value="B">House</option>
                                     <option value="C">Ground floor appartment</option>
@@ -83,7 +44,7 @@
                         </tr>
                         <tr>
                             <td>
-                                <select id="children" name="Number of children" class="selector-style">
+                                <select id="children" name="Number of children" class="form-style">
                                     <option value="A">Number of children</option>
                                     <option value="B">No children</option>
                                     <option value="B">1 child</option>
@@ -94,7 +55,7 @@
                         </tr>
                         <tr>
                             <td>
-                                <select id="outdoor facilities" name="Outdoor facilities" class="selector-style">
+                                <select id="outdoor facilities" name="Outdoor facilities" class="form-style">
                                     <option value="A">Outdoor facilities</option>
                                     <option value="B">Garden</option>
                                     <option value="B">Balcony</option>
@@ -104,7 +65,7 @@
                         </tr>
                         <tr>
                             <td>
-                                <select id="animals possessed" name="Animals possessed" class="selector-style">
+                                <select id="animals possessed" name="Animals possessed" class="form-style">
                                     <option value="A">Animals possessed</option>
                                 </select>
                             </td>
@@ -112,8 +73,8 @@
                     </table>
                 </div>
 
-                <div class="green-box-second-tittle">
-                    <h5>Animals accepted</h5>
+                <div class="green-box-second-title">
+                    <h3>Animals accepted</h3>
                 </div>
 
                 <div class="animals-checkbox">
@@ -173,40 +134,37 @@
                 </div>
 
                 <div class="save-changes">
-                    <a href="#" class="btn-green"> Save changes</a>
+                    <a href="petsitter-dashboard.html" class="btn-green">Save changes</a>
                 </div>
             </div>
         </div>
-    </main>
+
 
     <!-- FOOTER -->
 
-     <footer class="footer-color">
-         <div>
-            <a href="aboutus.html" class="footertext-size">About us</a>
-            <a href="#" class="footertext-size">Terms of use</a>
-           </div>
-    <div>
-            <ul class="icon-align">
-                <li>
-                    <a href="#">
-                    <i class="fab fa-youtube"></i></a>
-                </li>
-                <li>
-                    <a href="#">
-                    <i class="fas fa-at"></i></a>
-                </li>
-                <li>
-                    <a href="#">
-                    <i class="fab fa-facebook"></i></a>
-                </li>
-                <li>
-                    <a href="https://www.instagram.com/keypers.ieseg/?hl=fr">
-                    <i class="fab fa-instagram"></i></a>
-                </li>
-            </ul>
-        </div>
-    </footer>
-    
-    </body>
-</html>
+  <footer class="footer-color">
+<div>
+  <a href="aboutus.html" class="footertext-size">About us</a>
+  <a href="#">Terms of use</a>
+</div>
+<div>
+  <ul class="icon-align">
+    <li>
+     <a href="#">
+      <i class="fab fa-youtube"></i></a>
+    </li>
+    <li>
+      <a href="#">
+       <i class="fas fa-at"></i></a>
+    </li>
+    <li>
+      <a href="#">
+       <i class="fab fa-facebook"></i></a>
+    </li>
+    <li>
+      <a href="https://www.instagram.com/keypers.ieseg/">
+       <i class="fab fa-instagram"></i></a>
+    </li>
+  </ul>
+</div>
+</footer>
