--- a/petsitterinformation.html
+++ b/petsitterinformation.html
@@ -25,7 +25,7 @@
 
     <!-- MAIN -->
 
-        <div class="container">
+        <div>
             <div class="green-box">
                 <div class="green-box-title">
                     <h1>Personnal information</h1>
